added hyperconvex limit curve gif

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
 <hr>
 <h2>Teaching</h2>
-<p>As of Fall 2024, I'm funded as a graduate Research Assistant. </p>
+<p>As of Summer 2025, I'm funded as a graduate Research Assistant. </p>
 <p>I also advise for <a href='https://www.comap.com/contests/mcm-icm'>COMAP MCM</a> at UIC, an undergraduate math modeling competition.</p>
     <h3>Past Teaching</h3>
     <ul>
+        <li>Spring 2025: Teaching Assistant Coordinator (covering for TAs in Math, Stat, and MCS courses)</li>
         <li>Spring 2024: Stat 101 Introduction to Statistics</li>
         <li>Spring 2022: Math 180 Calculus I</li>
         <li>Fall 2021: Math 220 Differential Equations</li>
@@ -51,6 +52,8 @@
 
 <p>Here are pictures of some ideas that I have been thinking about recently. They were created with <a href="http://draw.io/">Draw IO</a> or with <a href='https://matplotlib.org/'>Matplotlib</a>.</p>
     <ul>
+        <li>Hyperconvex limit curves: For hyperconvex representations, the projection of the limit curve is injective. As we perturb the T(3,5,5) representation in the SL(3,C) character variety towards the Anosov boundary, this projected limit curve appears to remain injective. </li>
+        <img src="tri355-hitchin-reverse.gif" alt="Hyperconvex limit curves" width="400" height="300" />
         <li>Visualizations of the C-Hitchin component for T(3,4,4), T(3,4,5), and T(3,5,5) representations in SL(3,C). Black means "likely Anosov" and lighter colors mean "not Anosov." See these <a href="VACCAROJ_Palermo_slides.pdf">slides</a> for more context.</li>
         <img src="tri344_r400_w24_parallel.jpg" alt="C-Hitchin component of T(3,4,4)" width="300">
         <img src="tri345_r400.png" alt="C-Hitchin component of T(3,4,5)" width="300">
